# tools

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
driving_license/: main.py
gui/: Makefile  app.py  translate_app.py
hpv/: captha.py  main.py
parser/: csv.py
translate/: main.py  translator.py
